JOORSAND/src/objects/Layout_Sections__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_Set_Name_left__c</fullName>
        <label>Field Set Name (left)</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Set_Name_right__c</fullName>
        <label>Field Set Name (right)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Layout Sections</label>
    <pluralLabel>Layout Sections</pluralLabel>
</CustomObject>